:bug: fix alignement of icon

--- a/frontend/resources/styles/main/partials/sidebar-element-options.scss
+++ b/frontend/resources/styles/main/partials/sidebar-element-options.scss
@@ -874,6 +874,7 @@
 
 .element-set-options-group {
   display: flex;
+  justify-content: space-between;
   padding: 3px;
   border: 1px solid $color-black;
   border-radius: 4px;
